--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -126,7 +126,7 @@
                         <div class="col-6">
                             <div class="row kt-margin-t-15 kt-padding-l-10">
                                 <div class="col-4 form-label">
-                                    <label class="my-auto text-color mandatory ">WM 00 wt.</label>
+                                    <label class="my-auto text-color ">WM 00 wt.</label>
                                 </div>
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.weightMachineZeroWeight.value"
@@ -161,7 +161,7 @@
                         <div class="col-6">
                             <div class="row kt-margin-t-15">
                                 <div class="col-4 form-label">
-                                    <label class="my-auto text-color mandatory ">With Ornament</label>
+                                    <label class="my-auto text-color ">With Ornament</label>
                                 </div>
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.withOrnamentWeight.value"
@@ -191,7 +191,7 @@
                         <div class="col-6">
                             <div class="row kt-margin-t-15 kt-padding-l-10">
                                 <div class="col-4 form-label">
-                                    <label class="my-auto text-color mandatory ">Stone Touch</label>
+                                    <label class="my-auto text-color ">Stone Touch</label>
                                 </div>
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.stoneTouch.value"
@@ -222,7 +222,7 @@
                         <div class="col-6">
                             <div class="row kt-margin-t-15">
                                 <div class="col-4 form-label">
-                                    <label class="my-auto text-color mandatory ">Acid Test</label>
+                                    <label class="my-auto text-color ">Acid Test</label>
                                 </div>
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.acidTest.value"
@@ -249,7 +249,7 @@
                         <div class="col-6">
                             <div class="row kt-margin-t-15 kt-padding-l-10">
                                 <div class="col-4 form-label">
-                                    <label class="my-auto text-color mandatory ">Purity Test</label>
+                                    <label class="my-auto text-color">Purity Test</label>
                                 </div>
                                 <div class="col-4 form-label"
                                     *ngIf="ornament.controls.purityTestImage.touched && ornament.controls.purityTestImage.invalid">
