--- a/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-details/customer-details.component.html
@@ -1,4 +1,4 @@
-<div class="parent pb-3" *ngIf="cutomerDetails">
+<div class="parent pb-3" *ngIf="false">
     <div class="row">
         <div class="col-12 card">
             <div class="row kt-margin-b-20">
